--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
         <p>Kuvempu Nagar 2nd cross,<br>
          Belur-573115,<br>
         Karnataka.<br>
-        +91 702 293 4099<br>
-        contactpragati1010@gmail.com
+        +91 702 093 4099<br>
+        contactme@gmail.com
         </p>
         <hr>
         <form class="" action="mailto:priyapragatis1010@gmail.com" method="post" enctype="text/plain">
